SAI-5048: Some enhancements for node level metrics (#220) (#229)
(cherry-picked from commit ad302eefb90340b51769155d4f5914a31262078d of fs/branch_9_3)